force-app/main/default/objects/License_Contact_Role__c/License_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>License Contact Role</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>