force-app/main/default/objects/License_Contact_Role__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>