force-app/main/default/objects/License_Contact_Role__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>