force-app/main/default/objects/License_Contact_Role__c/fields/Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>