force-app/main/default/objects/License_Contact_Role__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>