force-app/main/default/objects/License_Contact_Role__c/fields/Former__c.field-meta.xml
<CustomField>
    <fullName>Former__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact is no longer in this role.</inlineHelpText>
    <label>Former</label>
    <type>Checkbox</type>
</CustomField>