force-app/main/default/objects/License_Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
            <value>
                <fullName>Data &amp; Privacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>